add nul backend

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -95,6 +95,12 @@ IF (KOKKOS_ENABLE_SERIAL)
   APPEND_GLOB(KOKKOS_CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Serial/*.hpp)
 ENDIF()
 
+IF (KOKKOS_ENABLE_NULLIFIED)
+  APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/Nullified/*.cpp)
+  APPEND_GLOB(KOKKOS_CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Nullified/*.hpp)
+ENDIF()
+
+
 IF (KOKKOS_ENABLE_SYCL)
   APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/SYCL/*.cpp)
   APPEND_GLOB(KOKKOS_CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/SYCL/*.hpp)
